--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <th:unless th:if="${@rq.member.loginID}==${post.creatorId}">
+                <th:block th:if="${@rq.member.loginID}==${post.creatorId}">
                     <div class="flex flex-row justify-center">
                         <a class="btn btn-accent" th:href="@{|/usr/challenge/modifypost/${post.id}|}">수정하기</a>
                         <button class="btn btn-accent mx-5" th:onclick="'wantDelete(\'' + ${post.id} + '\')'">삭제하기</button>
@@ -79,14 +79,17 @@
                             <i class="fa-solid fa-heart" style="color: #da1010;"></i>
                         </button>
                     </div>
-                </th:unless>
+                </th:block>
 
 
-                <div class="pr-4 flex flex-row justify-end">
-                    <button th:attr="onclick='wantReport(\'' + ${post.id} + '\', \'' + ${@rq.member.loginID} + '\', \'' + ${post.creatorId} + '\')'">
-                        <i class="fa-solid fa-bell" style="color: #fb1818;"></i>
-                    </button>
-                </div>
+                <th:if th:unless="${@rq.member.loginID}==${post.creatorId}">
+                    <div class="pr-4 flex flex-row justify-end">
+                        <button th:attr="onclick='wantReport(\'' + ${post.id} + '\', \'' + ${@rq.member.loginID} + '\', \'' + ${post.creatorId} + '\')'">
+                            <i class="fa-solid fa-bell" style="color: #fb1818;"></i>
+                        </button>
+                    </div>
+                </th:if>
+
 
 
                 <div class="divider"></div>
