--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -13,123 +13,129 @@
 
 <main layout:fragment="main" class="flex flex-col w-full min-h-screen">
     <script>
-    function changeEquip(itemId) {
-        if (confirm('착용 하시겠습니까?')) {
-            location.href = "/usr/inventory/me/change/" + itemId;
+        function changeEquip(itemId) {
+            if (confirm('착용 하시겠습니까?' + itemId)) {
+                location.href = "/usr/inventory/me/change/" + itemId;
+            }
         }
-    }
-</script>
-    <div class="card lg:card-side bg-base-100 shadow-xl" style="margin: 20px; padding-left: 40px; padding-right: 40px">
-        <div class="card-body">
-            <h2 class="card-title font-bold w-[80%]">마이 페이지</h2>
-            <section class="flex justify-between">
-                <article class="bg-gray-100 rounded-lg w-[30%] flex justify-center p-7">
-                    <div class="flex flex-col items-center justify-center gap-[20px]">
-                        <div class="w-30 h-30">
-                            <div class="avatar indicator" style="width: 120px; height: 120px">
-<!--                                <a href=""><span class="indicator-item indicator-bottom badge badge-secondary">변경</span></a>-->
+    </script>
+    <div class="container mx-auto" style="padding-top: 40px;">
+        <div class="container mx-auto">
+            <div class="flex gap-5">
+                <div class="w-[250px] shrink-0">
+
+                    <div class="flex">
+                        <h3 class="text-2xl font-bold">My Page</h3>
+
+                        <div style="margin-left: auto;">
+                            <a href="/usr/member/me"
+                               th:style="'color: #' + ${@rq.member.equippedFont.item.subPattern} +
+                           '; background: #'+${@rq.member.equippedFont.item.pattern}+' !important; border: none;'"
+                               th:if="${@rq.login}"
+                               class="btn btn-xs rounded-lg font-bold mx-1"
+                               th:text="${@rq.member.nickname}">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="flex mt-5">
+                        <div class="flex-1 bg-white rounded-tl-md flex justify-center items-center">
+                            <div class="avatar indicator" style="width: 100px; height: 100px">
                                 <img class="rounded-full" src="https://kr.object.ncloudstorage.com/devchall/devchall_img/person.png" />
                             </div>
                         </div>
-<!--                        <h3 class="text-3xl" th:text="${@rq.member.loginID}"></h3>-->
-
-                        <h3 class="text-3xl rounded-xl"
-                            th:style="'color: #' + ${@rq.member.equippedFont.item.subPattern} +'; background: #'+${@rq.member.equippedFont.item.pattern}"
-                            th:if="${@rq.login}"
-                            th:text="${@rq.member.loginID}">
-                        </h3>
-
-
-
-
-                        <div class="flex justify-around">
-                            <h3 class="text-2xl" th:text="${@rq.member.nickname}"></h3>
-                            <a class="btn btn-sm mx-2" >변경</a>
-                        </div>
-                        <div class="flex justify-around">
-                            <h4 class="text-xl" th:text="${@rq.member.email}"></h4>
-                            <a class="btn btn-sm mx-2" >변경</a>
-                        </div>
-                        <div class="flex flex-col items-center">
-                            <span class="font-bold">포인트</span>
-<!--                            <a href="/usr/point/pointHistory" class="btn btn-warning">-->
-<!--                                <span class="font-bold" th:text="${@rq.member.point.currentPoint}"></span>-->
-<!--                            </a>-->
-                            <button onclick="openPointHistoryPopup()">
-                                <span class="font-bold" th:text="${@rq.member.point.currentPoint}"></span>
-                            </button>
+                        <div class="flex-1 bg-white rounded-tr-md flex justify-center items-center">
+                            <div class="flex flex-col items-center">
+                                <span class="font-bold">나의 포인트</span>
+                                <span class="font-thin" style="font-size: 8px;">사용내역을 확인해보세요!</span>
+                                <button onclick="openPointHistoryPopup()" th:style="'background-color: #' + ${@rq.member.equippedFont.item.pattern} +'; color: #' + ${@rq.member.equippedFont.item.subPattern} + '; border-radius: 10px; margin-top: 5px;'">
+                                    <span class="font-bold" th:text="${@rq.member.point.currentPoint  + 'p'}" style="padding: 0 5px;"></span>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </article>
-                <article class="w-[50%] flex flex-col justify-between">
-                    <div class="bg-gray-100 rounded-xl h-[250px] p-[20px] mb-[10px]">
-                        <h3 class="text-xl font-bold">마이 챌린지></h3>
+
+                    <div class="bg-white rounded-t-none rounded-b-md h-20" th:style="'background-color: #' + ${@rq.member.equippedFont.item.pattern} +'; color: #' + ${@rq.member.equippedFont.item.subPattern}">
+                        <div class="flex justify-between items-center">
+                            <div style="padding-left: 25px; padding-top: 10px;">
+                                <h3 class="text-lg font-thin" th:text="${@rq.member.loginID}"></h3>
+                                <h1 class="text-xl rounded-xl" th:if="${@rq.login}" th:text="${@rq.member.nickname}"></h1>
+                            </div>
+                            <style>
+                                .btn-custom {
+                                    background-color: #30343E;
+                                    color: #ffffff;
+                                }
+                            </style>
+                            <div style="padding-right: 15px; margin-left: 0px; margin-top: 35px;">
+                                <a class="btn btn-xs mx-2 btn-custom">닉네임 변경</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-1">
+                    <div class="bg-white rounded-md h-full p-5 overflow-x-auto">
+                        <h3 class="text-xl font-bold">마이 챌린지 &gt;</h3>
                         <div class="text-black p-2" th:if="${challengeMembers==null or #lists.isEmpty(challengeMembers)}">
                             <i class="fa-regular fa-face-laugh"></i> 참가 중인 챌린지가 없어요. 다양한 챌린지를 경험해보세요!
                         </div>
 
-                        <div th:unless="${challengeMembers==null or #lists.isEmpty(challengeMembers)}"
-                             class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-5 gap-[10px]">
-                            <div th:each="challengeMember:${challengeMembers}"
-                                 class="card w-auto h-[150px] bg-base-100 shadow-xl text-gray-400 my-2 ">
-                                <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
-                                    <figure class="pt-5">
-                                        <img th:src="${challengeMember.getLinkedChallenge().smallPhoto}" alt="Shoes" class="rounded-xl w-[90%]" />
-                                    </figure>
-                                </a>
-                                <div class="card-body items-center text-center" style="padding: 10px">
+                        <div class="flex gap-5 overflow-x-auto">
+                            <div th:unless="${challengeMembers==null or #lists.isEmpty(challengeMembers)}"
+                                 class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-5 gap-[10px]">
+                                <div th:each="challengeMember:${challengeMembers}"
+                                     class="card w-auto h-[150px] bg-base-100 shadow-xl text-gray-400 my-2">
                                     <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
-                                        <h4 class="text-black font-bold" style="font-size: small"
-                                            th:text="${challengeMember.linkedChallenge.challengeName}">
-                                            프로그래머스 코테 준비
-                                        </h4>
+                                        <figure class="pt-5">
+                                            <img th:src="${challengeMember.getLinkedChallenge().smallPhoto}" alt="Shoes" class="rounded-xl w-[90%]" />
+                                        </figure>
                                     </a>
-<!--                                    <div class="flex flex-wrap">-->
-<!--                                        <span class="badge badge-primary mx-1" style="font-size: x-small">매일</span>-->
-<!--                                        <span class="badge badge-secondary mx-1" style="font-size: x-small">코딩테스트</span>-->
-<!--                                    </div>-->
-                                    <progress class="progress progress-accent w-56" value="40" max="100"></progress>
-                                    <div class="card-actions flex justify-around">
-                                        <div style="font-size: x-small">
-                                            <a href="">
-                                                <span>댓글</span> <span>5</span>
-                                            </a>
-                                        </div>
-                                        <div style="font-size: x-small">
-                                            <a href="">
-                                                <span>클립</span><span>3</span>
-                                            </a>
+                                    <div class="card-body items-center text-center" style="padding: 10px">
+                                        <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
+                                            <h4 class="text-black font-bold" style="font-size: small"
+                                                th:text="${challengeMember.linkedChallenge.challengeName}">
+                                                프로그래머스 코테 준비
+                                            </h4>
+                                        </a>
+                                        <progress class="progress progress-accent w-56" value="40" max="100"></progress>
+                                        <div class="card-actions flex justify-around">
+                                            <div style="font-size: x-small">
+                                                <a href="">
+                                                    <span>댓글</span> <span>5</span>
+                                                </a>
+                                            </div>
+                                            <div style="font-size: x-small">
+                                                <a href="">
+                                                    <span>클립</span><span>3</span>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="bg-gray-100 h-[200px] p-[20px] rounded-xl">
-                        <h3 class="text-xl font-bold">나의 인벤토리</h3>
-                        <div class="grid grid-col-1 xl:grid-cols-4 gap-[10px]">
+                </div>
+            </div>
 
-<!--                                <div>-->
-<!--                                    <span class="text-lg">기본 색상</span>-->
-<!--                                    <div class="bg-black h-12 w-20 pb-7"></div>-->
-<!--                                </div>-->
-                            <div style="cursor: pointer" th:each="inventory:${@rq.member.inventoryList}"
-                                 th:onclick="'changeEquip('+${inventory.item.id}+')'">
-                                <div class="h-12 w-20 flex justify-center items-center"
-                                     th:style="'background-color: #'+${inventory.item.pattern}+';'">
-                                    <div th:if="${inventory.equipped}" class="badge badge-accent">착용중</div>
-                                </div>
+            <div class="mt-5 bg-white rounded-md p-5">
+                <h3 class="text-xl font-bold">나의 인벤토리</h3>
+                <div class="flex gap-5 overflow-auto">
+                    <div class="grid grid-col-1 xl:grid-cols-4 p-5 gap-[30px]">
+                        <div style="cursor: pointer" th:each="inventory:${@rq.member.inventoryList}"
+                             th:onclick="'changeEquip('+${inventory.item.id}+')'">
+                            <div class="h-12 w-20 flex justify-center items-center"
+                                 th:style="'background-color: #'+${inventory.item.pattern}+';'">
+                                <div th:if="${inventory.equipped}" class="badge badge-accent">착용중</div>
                             </div>
                         </div>
                     </div>
-                </article>
-            </section>
+                </div>
+            </div>
         </div>
-    </div>
 </main>
 
 </body>
 
-
 </html>
-
