Feat: 프론트에서 입력되지 않은 칸에 대한 경고창 발생 function CreateForm__submit을 통해 모든 칸이 입력되도록 하는 내용 추가

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -13,12 +13,23 @@
 
         function CreateForm__submit(form) {
 
-            // if (form.title.value.length > 25) {
-            //     toastWarning('챌린지 제목은 25자 까지 가능합니다.');
-            //     form.title.focus();
-            //     console.log('제대로 됩니까?');
-            //     return;
-            // }
+            if (
+                form.elements.title.value.trim() === '' ||
+                form.elements.contents.value.trim() === '' ||
+                form.elements.language.value === '공부하고 싶은 언어' ||
+                form.elements.subject.value === '공부 주제' ||
+                form.elements.postType.value === '인증 방식'
+            ) {
+                toastWarning('입력/선택 되지 않은 항목이 존재합니다.');
+                return false;
+            }
+
+            if (form.title.value.length > 25) {
+                toastWarning('챌린지 제목은 25자 까지 가능합니다.');
+                form.title.focus();
+                console.log('제대로 됩니까?');
+                return;
+            }
 
             if (form.contents.value.length > 500) {
                 toastWarning('챌린지 내용은 500자 까지 작성 가능합니다.');
@@ -35,15 +46,19 @@
                 return;
             }
 
-            // var fileInput = document.getElementById('img');
-            // var fileName = fileInput.value;
-            // var allowedExtensions = /(\.jpg|\.jpeg|\.png|\.gif)$/i;
-            //
-            // if (!allowedExtensions.exec(fileName)) {
-            //     toastWarning('첨부 파일의 확장자는 JPG, JPEG, PNG, GIF만 가능합니다.');
-            //     fileInput.value = '';
-            //     return;
-            // }
+            var fileInput = document.getElementById('img');
+            var fileName = fileInput.value;
+
+            if (fileName !== "") {
+                var allowedExtensions = /(\.jpg|\.jpeg|\.png|\.gif)$/i;
+
+                if (!allowedExtensions.exec(fileName)) {
+                    toastWarning('첨부 파일의 확장자는 JPG, JPEG, PNG, GIF만 가능합니다.');
+                    fileInput.value = '';
+                    return;
+                }
+            }
+
 
             form.submit(); // 폼 발송
         }
