--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -6,8 +6,7 @@
     <title>챌린지 디테일 페이지</title>
 </head>
 
-<body>
-
+<body class="bg-gray-100">
 <main layout:fragment="main" class="flex flex-col w-full justify-center">
     <script>
 
@@ -86,7 +85,7 @@
     </div>
 
     <div>
-        <div class="flex flex-wrap justify-around h-1/2 mt-14">
+        <div class="flex flex-wrap justify-around h-3/4 mt-14">
             <div class="w-1/8 h-full"></div>
             <div class="card bg-gray-200 w-3/4 h-full ml-20">
                 <div class="flex flex-col h-full">
