--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -138,6 +138,40 @@
                         </th:block>
                     </div>
                 </div>
+                <div class="divider"></div>
+                <div class="my-2" th:each="comment:${commentList}" th:unless="${#lists.isEmpty(commentList) or commentList == null}">
+                    <div th:unless ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-start">
+                        <div class="chat-image avatar">
+                            <div class="w-10 rounded-full">
+                                <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                            </div>
+                        </div>
+                        <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
+                            Obi-Wan Kenobi
+                            <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}">12:45</time>
+                        </div>
+                        <div class="chat-bubble" th:text="${comment.commentContent}">You were the Chosen One!</div>
+
+                    </div>
+                    <div th:if ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-end">
+                        <div class="chat-image avatar">
+                            <div class="w-10 rounded-full">
+                                <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                            </div>
+                        </div>
+                        <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
+                            Anakin
+                            <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}" >12:46</time>
+                        </div>
+                        <div class="chat-bubble" th:text="${comment.commentContent}">I hate you!</div>
+                    </div>
+                </div>
+                <form class="flex flex-row justify-center" method="post" th:action="'/usr/challenge/comment/write/'+${challenge.id}">
+                    <input type="text" name ="contents" placeholder="댓글을 달아보세요!" class="my-3 mx-4 input input-bordered input-accent w-full max-w-xs" />
+                    <button type="submit" class="mx-1 btn btn-accent btn-outline disabled">
+                        <i class="fas fa-paper-plane" style="color: #000000"></i>
+                    </button>
+                </form>
             </div>
             <div class="w-1/8 h-full"></div>
         </div>
