Docs: MainController -> 모집중인 것, 나의 것 , 공개, 비공개 잘 처리되게 리스트 처리, 카운트 어떻게 할지 명세

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -148,7 +148,7 @@
                                         <span class="badge badge-secondary mx-2" style="font-size: x-small" th:text="${challenge.challengeTag.challengeLanguage}"></span>
                                         <span class="badge badge-warning mx-2 my-1" style="font-size: x-small" th:text="${challenge.challengeTag.challengeSubject}"></span>
                                     </div>
-                                    <progress class="progress progress-warning w-56" th:value="${countList.get(challenge.getId())}" th:max="${challenge.challengeMemberLimit}"></progress>
+<!--                                    <progress class="progress progress-w/arning w-56" th:value="${countList.get(challenge.getId())}" th:max="${challenge.challengeMemberLimit}"></progress>-->
                                     <div class="card-actions flex justify-around">
                                         <div style="font-size: x-small">
                                             <a href="#">
