--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -38,10 +38,11 @@
 
                 <th:block th:if="${isJoin}">
                     <a th:href="@{|/usr/challenge/write_form/${challenge.id}|}"
-                       class="btn btn-accent mx-2">
+                       class="btn btn-accent mx-1 border-none" style="background-color: #03FA6E;">
                         <button>인증하기</button>
                     </a>
                 </th:block>
+
             </div>
             <div class="card bg-gray-200 mt-7 h-80 flex place-content-around">
                 <div class="flex justify-around space-x-5">
@@ -128,7 +129,8 @@
                                         <p th:text="${#strings.length(post.postContents) &gt; 15 ? #strings.substring(post.postContents, 0, 15) + '...' : post.postContents}"></p>
 
                                         <div class="card-actions justify-end">
-                                            <a class="btn btn-accent"
+
+                                            <a class="btn btn-accent mx-1 border-none" style="background-color: #03FA6E;"
                                                th:href="@{|/usr/challenge/postdetail/${post.id}|}">보러가기</a>
                                         </div>
                                     </div>
@@ -137,6 +139,45 @@
                         </th:block>
                     </div>
                 </div>
+
+                <div class="divider"></div>
+                <div class="my-2" th:each="comment:${commentList}" th:unless="${#lists.isEmpty(commentList) or commentList == null}">
+                    <div th:unless ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-start">
+                        <div class="chat-image avatar">
+                            <div class="w-10 rounded-full">
+                                <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                            </div>
+                        </div>
+
+                        <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
+                            Obi-Wan Kenobi
+                            <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}">12:45</time>
+                        </div>
+                        <div class="chat-bubble" th:text="${comment.commentContent}">You were the Chosen One!</div>
+
+                    </div>
+                    <div th:if ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-end">
+                        <div class="chat-image avatar">
+                            <div class="w-10 rounded-full">
+                                <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                            </div>
+                        </div>
+
+                        <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
+                            Anakin
+                            <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}" >12:46</time>
+                        </div>
+                        <div class="chat-bubble" th:text="${comment.commentContent}">I hate you!</div>
+                    </div>
+                </div>
+
+                <form class="flex flex-row justify-center" method="post" th:action="'/usr/challenge/comment/write/'+${challenge.id}">
+                    <input type="text" name="contents" placeholder="댓글을 달아보세요!" class="my-3 mx-4 input input-bordered input-accent w-full max-w-xs" style="border-color: #03FA6E;" />
+                    <button type="submit" class="mx-1 btn btn-accent btn-outline disabled">
+                        <i class="fas fa-paper-plane" style="color: #000000"></i>
+                    </button>
+                </form>
+
             </div>
             <div class="w-1/8 h-full"></div>
         </div>
