--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -59,6 +59,7 @@
                     <h1 class="text-[25px] font-black">챌린지 생성</h1>
                     <p class="ml-8 mt-2">원하는 챌린지를 생성해 보세요!</p>
                 </div>
+
                 <div class="w-1/2 p-5 lg:w-[65rem] flex flex-row justify-around content-around">
                     <div class="flex flex-col">
                         <label for="title" class="label">
@@ -66,13 +67,14 @@
                         </label>
                         <input type="text" name="title" maxlength="30" placeholder="챌린지명"
                                class="input input-bordered w-full form-control text-black input-accent" id="title"
-                               autofocus/>
+                               style="border-color: #03FA6E;" autofocus/>
 
                         <label for="contents" class="label mt-3">
                             <span class="text-gray-400">챌린지 내용</span>
                         </label>
                         <textarea rows="6" name="contents" placeholder="챌린지내용"
                                   class="textarea textarea-accent w-full form-control text-black"
+                                  style="border-color: #03FA6E;"
                                   id="contents"></textarea>
 
                         <div class="flex flex-col mt-3">
